Refactor package names to lowercase 'stream'
Updated package declarations from 'com.scaler.dsa1.Stream' to 'com.scaler.dsa1.stream' for consistency with Java naming conventions. Also moved PrintAllElements.java from the 'java8' package to 'stream' and updated its package declaration. Minor change in groupBy.java to use List.of instead of Arrays.asList.